# Aretrails2Wikidata

./: README.md  main.py  pyproject.toml
