[tool.poetry]
name = "aretrails2wikidata"
version = "0.1.0"
description = "Code to import all hiking trails in Åre to Wikidata."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
wikibaseintegrator = "^0.13.0"
# shapely = "^2.0.1"
# pandas = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.9.1"
isort = "^5.12.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
